--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -6,6 +6,10 @@ html
       href='node_modules/bootstrap/dist/css/bootstrap.min.css'
       rel='stylesheet'
     )
+    link(
+      href='assets/css/style.css'
+      rel='stylesheet'
+    )
 
     include parts/scripts
 
