--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,14 +1,3 @@
-.test
-  color: #fff
+body
+  overflow-x: hidden
 
-#test
-  background: #000
-  color: red
-  & .rest
-    display: none
-
-.test-other
-  border-right: 1px
-
-  .test
-    color: blue
