--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -18,7 +18,7 @@ html
       .row
         .col-md-4
           div(ng-controller='DirectoryTree')
-            button(ng-click='save(currentFilePath)') Save
+            button(ng-click='save(currentOpenFileScope.item.path)') Save
 
             ul.list-group
               li.list-group-item(
