Incapsulate jade template

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,3 +1,6 @@
+include parts/mixins
+
+
 html
   head
     meta(charset='UTF-8')
@@ -20,21 +23,11 @@ html
           div(ng-controller='DirectoryTree')
             button(ng-click='save(currentOpenFileScope.item.path)') Save
 
-            include parts/directory-tree
+            +dirTree('tree')
+
         .col-md-8
           textarea(ng-model='text' ui-tinymce)
 
 
-
-script#test(type='text/ng-template')
-  ul.list-group
-    li.list-group-item(
-      ng-repeat='item in item.children'
-      ng-class='{selected: item.isOpened == true}'
-    )
-      span.glyphicon(
-        ng-if='item.isFolder == true'
-        ng-class='item.isOpened == true ? "glyphicon-folder-open" : "glyphicon-folder-close"'
-      )
-      span(ng-click='open($event)') {{ item.name }}
-      span.badge(ng-if='item.isFolder == true') {{ getNoteCount(item.children) }}
+script#dir-tree-tpl(type='text/ng-template')
+  +dirTree('item.children')
