--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -4,3 +4,24 @@ body
 .list-group-item
   border: none
   padding-right: 0
+  padding-bottom: 0
+  padding-top: 0
+
+  & .list-group
+    margin-bottom: 0
+
+.list-group-item-inner
+  cursor: pointer
+  padding: 5px 10px
+
+  &:hover,
+  &:focus
+    background: #dcdcdc
+
+  .glyphicon
+    margin-right: 10px
+
+  & > .badge
+    float: right
+
+
