--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -18,6 +18,13 @@ body
   &:focus
     background: #dcdcdc
 
+  &.active
+    background: #3a92d6
+    color: #fff
+
+    & > .glyphicon
+      color: #fff
+
   .glyphicon
     margin-right: 10px
 
