--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,6 +10,11 @@ body
   & .list-group
     margin-bottom: 0
 
+  .open-folder-btn
+    font-size: 12px
+    cursor: pointer
+    transition: 0.3s ease
+
 .list-group-item-inner
   cursor: pointer
   padding: 5px 10px
@@ -31,4 +36,9 @@ body
   & > .badge
     margin-left: 10px
 
+.rotate-90
+  transform: rotate(90deg)
 
+.no-select
+  -webkit-user-select: none
+  user-select: none
