--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,6 +6,7 @@ body
   padding-right: 0
   padding-bottom: 0
   padding-top: 0
+  font-size: 12px
 
   & .list-group
     margin-bottom: 0
@@ -32,6 +33,13 @@ body
 
   .glyphicon
     margin-right: 10px
+
+  .title
+    display: inline-block
+    text-overflow: ellipsis
+    white-space: nowrap
+    overflow: hidden
+    width: calc(100% - 100px)
 
   & > .badge
     margin-left: 10px
