--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -39,6 +39,8 @@ body
     text-overflow: ellipsis
     white-space: nowrap
     overflow: hidden
+    position: relative
+    top: 5px
     width: calc(100% - 100px)
 
   & > .badge
