--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -21,6 +21,8 @@ html
       .row(ng-controller='DirectoryTree')
         .col-md-3
           button(ng-click='save(currentOpenFileScope.item.path)') Save
+          button(ng-click='createFolder()') Create folder
+          button(ng-click='createNotes()') Create notes
           +dirTree('tree.children')
 
         .col-md-3
