--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -52,3 +52,11 @@ body
 .no-select
   -webkit-user-select: none
   user-select: none
+
+#folders-col
+  width: 200px
+  min-width: 100px
+
+#notes-col
+  width: 200px
+  min-width: 100px
