concat of vendors

--- a/src/jade/parts/scripts.jade
+++ b/src/jade/parts/scripts.jade
@@ -1,6 +1,7 @@
 script(src='node_modules/jquery/dist/jquery.min.js')
-script(src='node_modules/underscore/underscore-min.js')
 script(src='node_modules/tinymce/tinymce.jquery.min.js')
 script(src='node_modules/angular/angular.min.js')
 script(src='node_modules/angular-ui-tinymce/src/tinymce.js')
+script(src='node_modules/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js')
+//script(src='app/vendor.js')
 script(src='app/index.js')
