--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -10,6 +10,10 @@ html
       rel='stylesheet'
     )
     link(
+    href='node_modules/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css'
+    rel='stylesheet'
+    )
+    link(
       href='assets/css/style.css'
       rel='stylesheet'
     )
